examples/test/testpolicy13773.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13773
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key31: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value9
          key17: value35
          key38: value3
      podSelector:
        matchLabels:
          key18: value29
